test/visibility/rename/renameConflictInList.good
renameConflictInList.chpl:7: In module 'M':
renameConflictInList.chpl:8: error: 'baz' is multiply defined
